--- a/custom_direct_rule.yaml
+++ b/custom_direct_rule.yaml
@@ -13,3 +13,5 @@ payload:
   - DOMAIN-SUFFIX,cloudflare.com
   - DOMAIN-SUFFIX,anti-ad.net
   - DOMAIN-SUFFIX,cloudflare.com
+  - DOMAIN-SUFFIX,nintendo.net
+  - DOMAIN-SUFFIX,ip.sb
