--- a/custom_direct_rule.yaml
+++ b/custom_direct_rule.yaml
@@ -15,3 +15,4 @@ payload:
   - DOMAIN-SUFFIX,cloudflare.com
   - DOMAIN-SUFFIX,nintendo.net
   - DOMAIN-SUFFIX,ip.sb
+  - DOMAIN-SUFFIX,cloudflare-dns.com
