--- a/custom_direct_rule.yaml
+++ b/custom_direct_rule.yaml
@@ -16,3 +16,4 @@ payload:
   - DOMAIN-SUFFIX,nintendo.net
   - DOMAIN-SUFFIX,ip.sb
   - DOMAIN-SUFFIX,cloudflare-dns.com
+  - DOMAIN-SUFFIX,nelreports.net
