--- a/custom_direct_rule.yaml
+++ b/custom_direct_rule.yaml
@@ -17,3 +17,4 @@ payload:
   - DOMAIN-SUFFIX,ip.sb
   - DOMAIN-SUFFIX,cloudflare-dns.com
   - DOMAIN-SUFFIX,nelreports.net
+  - DOMAIN-SUFFIX,notion.so
