--- a/custom_direct_rule.yaml
+++ b/custom_direct_rule.yaml
@@ -18,3 +18,4 @@ payload:
   - DOMAIN-SUFFIX,cloudflare-dns.com
   - DOMAIN-SUFFIX,nelreports.net
   - DOMAIN-SUFFIX,notion.so
+  - DOMAIN-SUFFIX,openwrt.org
