--- a/custom_direct_rule.yaml
+++ b/custom_direct_rule.yaml
@@ -19,3 +19,4 @@ payload:
   - DOMAIN-SUFFIX,nelreports.net
   - DOMAIN-SUFFIX,notion.so
   - DOMAIN-SUFFIX,openwrt.org
+  - DOMAIN-SUFFIX,meomiao.xyz
