--- a/custom_proxy_rule.yaml
+++ b/custom_proxy_rule.yaml
@@ -10,3 +10,4 @@ payload:
   - DOMAIN-SUFFIX,chinadigitaltimes.net
   - DOMAIN-SUFFIX,rfi.fr
   - DOMAIN-SUFFIX,m-team.cc
+  - DOMAIN-SUFFIX,googleapis.cn
