--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -12,8 +12,7 @@ server_check_timeout = 2000
 
 # > 用于Check节点IP地址(以下geo_location_checker任选一个即可)
 ;geo_location_checker=disabled
-geo_location_checker=http://ip-api.com/json/?lang=zh-CN
-#, https://ghproxy.com/https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/IP_API.js
+geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://ghproxy.com/https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/IP_API.js
 
 # > 功能强大的解析器，用于引用资源的转换
 resource_parser_url=https://ghproxy.com/https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
