--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -77,7 +77,7 @@ url-latency-benchmark=美国节点, server-tag-regex=(?=.*(美|US|(?i)States|Ame
 
 
 [server_remote]
-https://api.meomiao.host/api/v1/client/subscribe?token=4aef492d3304aa515b4f84a003ad0a29, tag=meomiao, update-interval=172800, opt-parser=false, enabled=true
+https://api.meomiao.host/api/v1/client/subscribe?token=#####, tag=meomiao, update-interval=172800, opt-parser=false, enabled=true
 
 https://cdn.staticaly.com/gh/DesperadoJ/Rules-for-UnblockNeteaseMusic/master/QuantumultX/quantumultx-server.txt, tag=网易云音乐, img-url=https://cdn.staticaly.com/gh/Koolson/Qure/master/IconSet/Netease_Music_Unlock.png
 
