--- a/QX.conf
+++ b/QX.conf
@@ -87,7 +87,7 @@ host,iadmusicmatvideo.music.126.net,reject
 
 ####################
 geoip, cn, direct
-final, 兜底分流
+final, direct
 
 
 [rewrite_local]
