--- a/QX.conf
+++ b/QX.conf
@@ -32,24 +32,13 @@ doh-server = https://223.5.5.5/dns-query, https://223.6.6.6/dns-query
 
 
 [policy]
-
-static=🎶网易云音乐, direct, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netease_Music_Unlock.png
-
-
-
-
+static=网易云音乐, 🎶 解锁, ‼️ 免费代理，如遇收费请举报, direct, img-url=https://cdn.staticaly.com/gh/Koolson/Qure/master/IconSet/Netease_Music_Unlock.png
 
 [server_remote]
-
-##>>>>>>解锁网易云音乐 节点<<<<<<<<<<<<<##
-shadowsocks=music.desperadoj.com:30003, method=aes-128-gcm, password=desperadoj.com_free_proxy_etg0, fast-open=false, udp-relay=false, tag=🎶 解锁网易云音乐
-
+https://cdn.staticaly.com/gh/DesperadoJ/Rules-for-UnblockNeteaseMusic/master/QuantumultX/quantumultx-server.txt, tag=网易云音乐, img-url=https://cdn.staticaly.com/gh/Koolson/Qure/master/IconSet/Netease_Music_Unlock.png
 
 [filter_remote]
-
-https://ghproxy.com/https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Filter/NeteaseMusic.list, tag=解锁网易云音乐, force-policy=🎶网易云音乐, update-interval=172800, opt-parser=false, enabled=true
-
-
+https://cdn.staticaly.com/gh/DesperadoJ/Rules-for-UnblockNeteaseMusic/master/QuantumultX/quantumultx-filter.list, tag=🎵 网易云音乐, force-policy=网易云音乐, update-interval=172800, enabled=true
 
 
 [rewrite_remote]
