--- a/QX.conf
+++ b/QX.conf
@@ -20,6 +20,13 @@ https://cdn.staticaly.com/gh/DesperadoJ/Rules-for-UnblockNeteaseMusic/master/Qua
 https://cdn.staticaly.com/gh/DesperadoJ/Rules-for-UnblockNeteaseMusic/master/QuantumultX/quantumultx-filter.list, tag=🎵 网易云音乐, force-policy=网易云音乐, update-interval=172800, enabled=true
 
 [rewrite_remote]
+#>>>>>解锁TikTok
+https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/QuantumultX/master/TikTok.conf, tag=Tiktok解锁[旧版V21]@Orz-3, update-interval=86400, opt-parser=false, enabled=true
+
+[rewrite_local]
+
+##>>>>默认已解锁Tiktok日区，如需改区，将下方JP更改成你想改的区域 TW/JP/KR
+(?<=_region=)CN(?=&) url 307 JP
 
 [server_local]
 
@@ -33,7 +40,7 @@ host,iadmusicmatvideo.music.126.net,reject
 
 final, direct
 
-[rewrite_local]
+
 
 [task_local]
 
