--- a/QX.conf
+++ b/QX.conf
@@ -26,7 +26,9 @@ https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/QuantumultX/master/T
 [rewrite_local]
 
 ##>>>>默认已解锁Tiktok日区，如需改区，将下方JP更改成你想改的区域 TW/JP/KR
-(?<=_region=)CN(?=&) url 307 JP
+(?<=_region=)CN(?=&) url 307 IT
+(?<=&mcc_mnc=)4 url 307 2
+^(https?:\/\/(dm|tnc)[\w-]+\.\w+\.com\/.+)(\?)(.+) url 302 $1$3
 
 [server_local]
 
