--- a/QX.conf
+++ b/QX.conf
@@ -21,14 +21,14 @@ https://cdn.staticaly.com/gh/DesperadoJ/Rules-for-UnblockNeteaseMusic/master/Qua
 
 [rewrite_remote]
 #>>>>>解锁TikTok
-https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/QuantumultX/master/TikTok.conf, tag=Tiktok解锁[旧版V21]@Orz-3, update-interval=86400, opt-parser=false, enabled=true
+https://ghproxy.com/https://raw.githubusercontent.com/xiongking/ClashRule/main/TikTok_IT.conf, tag=Tiktok解锁-意大利, update-interval=86400, opt-parser=false, enabled=true
 
 [rewrite_local]
 
 ##>>>>默认已解锁Tiktok日区，如需改区，将下方JP更改成你想改的区域 TW/JP/KR
-(?<=_region=)CN(?=&) url 307 IT
-(?<=&mcc_mnc=)4 url 307 2
-^(https?:\/\/(dm|tnc)[\w-]+\.\w+\.com\/.+)(\?)(.+) url 302 $1$3
+#(?<=_region=)CN(?=&) url 307 IT
+#(?<=&mcc_mnc=)4 url 307 2
+#^(https?:\/\/(dm|tnc)[\w-]+\.\w+\.com\/.+)(\?)(.+) url 302 $1$3
 
 [server_local]
 
