--- a/QX.conf
+++ b/QX.conf
@@ -4,6 +4,9 @@ server_check_url=http://www.gstatic.com/generate_204
 dns_exclusion_list = *.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.icitymobile.mobi, *.pingan.com.cn, *.cmbchina.com, *.localnetwork.uop, mfs.ykimg.com*.ttf
 excluded_routes= 192.168.0.0/16, 172.16.0.0/12, 100.64.0.0/10, 10.0.0.0/8
 
+# > 功能强大的解析器，用于引用资源的转换
+resource_parser_url=https://ghproxy.com/https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
+
 [dns]
 server=119.29.29.29
 server=223.5.5.5
@@ -15,6 +18,7 @@ static=网易云音乐, 🎶 解锁, ‼️ 免费代理，如遇收费请举报
 
 [server_remote]
 https://cdn.staticaly.com/gh/DesperadoJ/Rules-for-UnblockNeteaseMusic/master/QuantumultX/quantumultx-server.txt, tag=网易云音乐, img-url=https://cdn.staticaly.com/gh/Koolson/Qure/master/IconSet/Netease_Music_Unlock.png
+
 
 [filter_remote]
 https://cdn.staticaly.com/gh/DesperadoJ/Rules-for-UnblockNeteaseMusic/master/QuantumultX/quantumultx-filter.list, tag=🎵 网易云音乐, force-policy=网易云音乐, update-interval=172800, enabled=true
