--- a/QX.conf
+++ b/QX.conf
@@ -17,6 +17,7 @@ server=8.8.4.4
 static=网易云音乐, 🎶 解锁, ‼️ 免费代理，如遇收费请举报, direct, img-url=https://cdn.staticaly.com/gh/Koolson/Qure/master/IconSet/Netease_Music_Unlock.png
 
 [server_remote]
+https://cdn.jsdelivr.net/gh/vveg26/SubAutoConv@main/sub/clash/selfnode.yaml, tag=vveg, update-interval=86400, opt-parser=true, enabled=true
 https://cdn.staticaly.com/gh/DesperadoJ/Rules-for-UnblockNeteaseMusic/master/QuantumultX/quantumultx-server.txt, tag=网易云音乐, img-url=https://cdn.staticaly.com/gh/Koolson/Qure/master/IconSet/Netease_Music_Unlock.png
 
 
