--- a/custom_proxy_rule.yaml
+++ b/custom_proxy_rule.yaml
@@ -9,5 +9,6 @@ payload:
 
   - DOMAIN-SUFFIX,chinadigitaltimes.net
   - DOMAIN-SUFFIX,rfi.fr
+  - DOMAIN-SUFFIX,rfi.org
   - DOMAIN-SUFFIX,m-team.cc
   - DOMAIN-SUFFIX,googleapis.cn
