--- a/AppCrack.conf
+++ b/AppCrack.conf
@@ -1,8 +1,8 @@
-/******************************
-脚本功能：PDF—Expert点睛+解锁订阅
-下载地址：https://is.gd/oYx3kv
-软件版本：v7.11.0
-脚本作者：彭于晏
-更新时间：2022-9-27
-*******************************
+#/******************************
+#脚本功能：PDF—Expert点睛+解锁订阅
+#下载地址：https://is.gd/oYx3kv
+#软件版本：v7.11.0
+#脚本作者：彭于晏
+#更新时间：2022-9-27
+#*******************************
 https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/PDFExpert.js
